10-sg/main.tf
module "frontend" {
   # source = "../../terraform-aws-securitygroup"
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = var.frontend_sg_name
    sg_description = var.frontend_sg_description
    vpc_id = local.vpc_id
}

module "bastion" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name ="var.bastion_sg_name"
    sg_description = var.bastion_sg_description
    vpc_id = local.vpc_id
}

module "backend_alb" {
        source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
        project = var.project
        environment = var.environment

        sg_name = var.backend_alb_sg_name
        sg_description = var.backend_alb_sg_description
        vpc_id = local.vpc_id 
}

module "vpn" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = var.vpn_sg_name
    sg_description = var.vpn_sg_description 
    vpc_id = local.vpc_id
}

module "mongodb" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "mongodb"
    sg_description = "created sg for mongodb"   
    vpc_id = local.vpc_id
}

module "redis" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "redis"
    sg_description = "created sg for redis"   
    vpc_id = local.vpc_id
}

module "mysql" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "mysql"
    sg_description = "created sg for mysql"   
    vpc_id = local.vpc_id
}

module "rabbitmq" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "rabbitmq"
    sg_description = "created sg for rabbitmq"   
    vpc_id = local.vpc_id
}

module "catalogue" {
    source = "git::https://github.com/DEVOPSPRACTICEDEMO/terraform-aws-securitygroup.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "catalogue"
    sg_description = "created sg for catalogue"
    vpc_id = local.vpc_id 
}

# bastion accepting connections from my laptop
resource "aws_security_group_rule" "bastion_laptop" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Replace with your laptop's IP address or CIDR block
    security_group_id = module.bastion.sg_id
}

#backend_alb accepting connections from my bastion host on port no 80

resource "aws_security_group_rule" "backend_alb_bastion" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_group_id = module.backend_alb.sg_id
    source_security_group_id = module.bastion.sg_id
}

# VPN ports 22, 443, 1994, and 943 open to the world
# These rules allow SSH, HTTPS, and OpenVPN connections to the VPN server
resource "aws_security_group_rule" "vpn_ssh" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
    security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "vpn_https" {
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.vpn.sg_id  
}

resource "aws_security_group_rule" "vpn_1994" {
    type = "ingress"
    from_port = 1994
    to_port = 1994
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "vpn_943" {
    type = "ingress"
    from_port = 943
    to_port = 943
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.vpn.sg_id  
}

# backened ALB accepting connections from my vpn on port no 80
resource "aws_security_group_rule" "backend_alb_vpn" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_group_id = module.backend_alb.sg_id
    source_security_group_id = module.vpn.sg_id 
}

# MongoDB accepting connections 
resource "aws_security_group_rule" "mongodb_vpn_ssh" {
    count = length(var.mongodb_ports_vpn)
    type = "ingress"
    from_port = var.mongodb_ports_vpn[count.index]
    to_port = var.mongodb_ports_vpn[count.index]
    # This rule allows SSH connections to the MongoDB instance from the VPN
    protocol = "tcp"
    security_group_id = module.mongodb.sg_id
    source_security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "redis_vpn_ssh" {
    count = length(var.redis_ports_vpn)
    type = "ingress"
    from_port = var.redis_ports_vpn[count.index]
    to_port = var.redis_ports_vpn[count.index]
    # This rule allows SSH connections to the redis instance from the VPN
    protocol = "tcp"
    security_group_id = module.redis.sg_id
    source_security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "mysql_vpn_ssh" {
    count = length(var.mysql_ports_vpn)
    type = "ingress"
    from_port = var.mysql_ports_vpn[count.index]
    to_port = var.mysql_ports_vpn[count.index]
    # This rule allows SSH connections to the mysql instance from the VPN
    protocol = "tcp"
    security_group_id = module.mysql.sg_id
    source_security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "rabbitmq_vpn_ssh" {
    count = length(var.rabbitmq_ports_vpn)
    type = "ingress"
    from_port = var.rabbitmq_ports_vpn[count.index]
    to_port = var.rabbitmq_ports_vpn[count.index]
    # This rule allows SSH connections to the rabbitmq instance from the VPN
    protocol = "tcp"
    security_group_id = module.rabbitmq.sg_id
    source_security_group_id = module.vpn.sg_id 
}

resource "aws_security_group_rule" "catalogue_backend_alb" {
    type = "ingress"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    security_group_id = module.catalogue.sg_id
    source_security_group_id = module.backend_alb.sg_id  
}

resource "aws_security_group_rule" "catalogue_vpn_ssh" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_group_id = module.catalogue.sg_id
    source_security_group_id = module.vpn.sg_id
}

resource "aws_security_group_rule" "catalofue_vpn_http" {
    type = "ingress"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    security_group_id = module.catalogue.sg_id
    source_security_group_id = module.vpn.sg_id
}

resource "aws_security_group_rule" "catalogue_bastion" {
    type = "ingress"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    security_group_id = module.catalogue.sg_id
    source_security_group_id = module.bastion.sg_id
}

resource "aws_security_group_rule" "mongodb_catalogue" {
    type = "ingress"
    from_port = 27017
    to_port = 27017
    protocol = "tcp"
    security_group_id = module.mongodb.sg_id
    source_security_group_id = module.catalogue.sg_id
}
